tests/error/inout_errors/barrier_linearity.err
Error: Copy violation (at $FILE:11:14)
   | 
 9 | def main() -> qubit:
10 |    q = qubit()
11 |    barrier(q, q)
   |               ^ Variable `q` with non-copyable type `qubit` cannot be
   |                 borrowed ...

Note:
   | 
10 |    q = qubit()
11 |    barrier(q, q)
   |            - Variable `q` already borrowed here

Guppy compilation failed due to 1 previous error
